--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout
-        android:id="@+id/authContainer"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:padding="@dimen/_15sdp" />
+        android:background="@drawable/screen_background_gradient_diagnal"
+        android:orientation="vertical">
 
+        <include layout="@layout/layout_app_logo" />
+
+        <FrameLayout
+            android:id="@+id/authContainer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="@dimen/_15sdp" />
+    </LinearLayout>
 </layout>
