--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:ambientShadowAlpha">0.1</item>
         <item name="android:spotShadowAlpha">0.1</item>
         <item name="android:statusBarColor">#00000000</item>
+        <item name="android:windowActivityTransitions">true</item>
     </style>
 
     <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
@@ -124,6 +125,18 @@
         <item name="colorAccent">@color/text_gray</item>
         <item name="colorControlNormal">@color/text_gray</item>
         <item name="colorControlActivated">@color/text_gray</item>
+        <item name="boxStrokeColor">@color/input_selector</item>
+        <item name="boxStrokeWidth">0.6dp</item>
+    </style>
+
+    <style name="TextLabelDark" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/white</item>
         <item name="boxStrokeColor">@color/input_selector</item>
         <item name="boxStrokeWidth">0.6dp</item>
     </style>
